--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.7.0",
+    "lodash": "^4.17.4",
     "minimist": "^1.2.0",
     "mocha": "^3.0.0",
     "node-sass": "^4.5.2",
@@ -73,6 +74,7 @@
     "react-dom": "^15.4.2",
     "react-router": "^4.0.0",
     "redux-thunk": "^2.2.0",
-    "sass-loader": "^6.0.3"
+    "sass-loader": "^6.0.3",
+    "vis": "^4.19.1"
   }
 }
